# FASTLIO2_ROS2

./: .gitignore  README.md
fastlio2_bringup/: CMakeLists.txt  package.xml
fastlio2_bringup/launch/: localization.launch.py  localization_full.launch.py  mapping.launch.py  mapping_full.launch.py
fastlio2_bringup/scripts/: fastlio2_gui.py
lidar_people_filter/: CMakeLists.txt  README.md  package.xml  setup.py
lidar_people_filter/config/: dbscan_filter.yaml  dbscan_filter_prev.yaml  octomap.yaml  people_filter.yaml
lidar_people_filter/launch/: people_filter.launch.py
lidar_people_filter/lidar_people_filter/: __init__.py  dbscan_filter_node.py
lidar_people_filter/scripts/: background_subtractor_node.py  dbscan_filter_node.py  dbscan_filter_node_prev.py  filter_map_pcd.py  people_filter_node.py  verify_pipeline.sh
lidar_semantic/: package.xml  setup.cfg  setup.py
lidar_semantic/config/: semantic.yaml
lidar_semantic/launch/: semantic.launch.py
lidar_semantic/lidar_semantic/: randlanet_node.py
lidar_semantic/lidar_semantic/model/: randlanet.py
lidar_semantic/scripts/: download_weights.py
lidar_semantic/weights/: conv.py
