<?xml version="1.0"?>
<package format="3">
  <name>fastlio2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for FASTLIO2: mapping and localization modes</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fastlio2</exec_depend>
  <exec_depend>localizer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
