<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_people_filter</name>
  <version>1.1.0</version>
  <description>Two-stage people removal: DBSCAN + octomap_server2 for Livox Mid360 + FastLIO.</description>
  <maintainer email="kaan@example.com">Kaan Ural</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
